fix: grid-2/grid-3 images show full on mobile instead of cover/cut

--- a/css/project.css
+++ b/css/project.css
@@ -693,6 +693,12 @@
     grid-template-columns: 1fr;
   }
 
+  .proj__grid-2 img,
+  .proj__grid-3 img {
+    height: auto;
+    object-fit: contain;
+  }
+
   .proj__split {
     grid-template-columns: 1fr;
   }
